--- a/paper/paper7/paper7-evaluation.tex
+++ b/paper/paper7/paper7-evaluation.tex
@@ -244,6 +244,17 @@ University of Mannheim, Germany \\
 
 \section{Introduction}
 
+\section{Disco}
+
+\begin{itemize}
+	\item DwB Resource Discovery Portal
+	\begin{itemize}
+	  \item Metadata records for each study are available on the study landing pages.
+		\item \url{http://dwb-dev.nsd.uib.no/portal/#/study/http://portal.dwbproject.org/resource/Study/de.gesis/zacat/ZA5597/en}
+    \item Search interface: \url{http://dwb-dev.nsd.uib.no/portal/#/search?q=smoking&p=1&s=score&d=desc&f=text}
+	\end{itemize}
+\end{itemize}
+
 \section{Data Cube}
 
 \begin{itemize}
