--- a/paper/ISWC 2015 Tutorial/ISWC-2015-tutorial.tex
+++ b/paper/ISWC 2015 Tutorial/ISWC-2015-tutorial.tex
@@ -311,10 +311,15 @@ The intended audience of this tutorial are Linked Data developers - beginners as
 	\item homepage: \url{http://www.gesis.org/}
 \end{itemize}
 
-\textbf{Thomas Bosch} studied information systems, holds a degree in Computer Science (M.Sc.), and is currently a PhD student.
+\textbf{Thomas Bosch} studied information systems, holds a degree in Computer Science (M.Sc.), and is currently a PhD student in Computer Science.
 His research topic is all about RDF validation.
-More specifically, he investigates how to validate any RDF constraints (formulated by multiple constraint languages) and how to express them generically. 
-He held multiple presentations at international conferences and workshops (e.g. WWW, ISWC, DC, Dagstuhl seminars). 
+He investigates how to validate any RDF constraints (formulated by arbitrary constraint languages) and how to express them generically. 
+He presented his work at international conferences and workshops (e.g. WWW, ISWC, DC, and Dagstuhl seminars). 
+Thomas Bosch is member of the RDF Vocabularies Working Group\footnote{\url{http://www.ddialliance.org/alliance/working-groups#RDF}} of the DDI Alliance,
+part of the editorial board of the  DCMI RDF Application Profiles Task Group\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}, 
+editor of the specifications DDI-RDF Discovery Vocabulary (Disco)\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}}
+and Physical Data Description (PHDD)\footnote{A vocabulary to represent data in a rectangular format in RDF; \url{https://github.com/linked-statistics/physical-data-description}},
+and contributes to the W3C RDF Data Shapes Working Group\footnote{\url{http://www.w3.org/2014/data-shapes/charter}}.
 
 \begin{itemize}
   \item affiliation: GESIS - Leibniz Institute for the Social Sciences
