--- a/paper/paper7/paper7-evaluation.tex
+++ b/paper/paper7/paper7-evaluation.tex
@@ -247,11 +247,20 @@ University of Mannheim, Germany \\
 \section{Disco}
 
 \begin{itemize}
+  \item Microdata Information System (Missy)
 	\item DwB Resource Discovery Portal
 	\begin{itemize}
 	  \item Metadata records for each study are available on the study landing pages.
 		\item \url{http://dwb-dev.nsd.uib.no/portal/#/study/http://portal.dwbproject.org/resource/Study/de.gesis/zacat/ZA5597/en}
     \item Search interface: \url{http://dwb-dev.nsd.uib.no/portal/#/search?q=smoking&p=1&s=score&d=desc&f=text}
+	\end{itemize}
+	\item DDA and SND SPARQL endpoint\footnote{\url{http://ddi-rdf.borsna.se/}} 
+	\begin{itemize}
+		\item triples: 2,271,415
+		\item studies: 1,490
+		\item universes: 10,188
+		\item questions: 139,237
+		\item variables: 80,070
 	\end{itemize}
 \end{itemize}
 
@@ -262,6 +271,17 @@ University of Mannheim, Germany \\
 VoIDs) is full of data sets (probably close to 10k) using RDF Data Cube,
 and some of those also include XKOS.
 \end{itemize}
+
+\section{XKOS}
+
+\begin{itemize}
+	\item Nomenclature d'activités française (NAF)\footnote{\url{http://rdf.insee.fr/codes/index.html}}: French classification expressed in XKOS. the French refinement of the NACE, because it has explanatory notes.
+	\item Nomenclature des Professions et Catégories Socioprofessionnelles (PCS)\footnote{\url{http://rdf.insee.fr/codes/index.html}}: French classification expressed in XKOS.
+	\item Nomenclature des catégories juridiques (CJ)\footnote{\url{http://rdf.insee.fr/codes/index.html}}: French classification expressed in XKOS.
+	\item ISIC: has explanatory notes too. 
+	\item ISCO
+\end{itemize}
+
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
