--- a/paper/ISWC 2015 Tutorial/ISWC-2015-tutorial.tex
+++ b/paper/ISWC 2015 Tutorial/ISWC-2015-tutorial.tex
@@ -176,8 +176,8 @@
 
 %
 %
-\title{Let’s Disco – Publishing person-level data as Linked Data.}
-\subtitle{Building domain-specific Data Sets with Disco, PHDD, XKOS and widely used Vocabularies.
+\title{Let’s Disco – Publishing person-level data as Linked Data}
+\subtitle{Building domain-specific Data Sets with Disco, PHDD, XKOS and widely used Vocabularies
 }
 %
 \titlerunning{XXXXX}  % abbreviated title (for running head)
@@ -197,8 +197,6 @@
 \begin{abstract}
 The DDI-RDF Discovery Vocabulary (Disco) is an RDF Schema vocabulary that enables the representation of person-level data sets and related metadata.
 It is based on DDI (Data Documentation Initiative) which is a metadata standard related to the observation and measurement of human activity.
-%Disco is intended to provide means to describe person-level data by essential metadata for the discovery purpose. 
-%Using Disco, such data sets can be discovered in the Web of Linked Data by using RDF technologies, e.g. searching for specific questions, topics, and geographical coverage. 
 Using Disco, such data sets which are often used in different domains like the social, ecomical and behavoural sciences can be published as Linked Data. 
 However, for a meaningful and complete publication of these data sets, additional established RDF vocabularies (e.g. RDF Data Cube, DCAT, SKOS, PROV-O, XKOS, and PHDD) are reused to a large extend. 
 This combination allows for expressing information on metadata of data collections, single data sets, relationships between them, different versions of them and related provenance information. 
