--- a/paper/ISWC 2015 Tutorial/ISWC-2015-tutorial.tex
+++ b/paper/ISWC 2015 Tutorial/ISWC-2015-tutorial.tex
@@ -197,7 +197,7 @@
 \begin{abstract}
 The DDI-RDF Discovery Vocabulary (Disco) is an RDF Schema vocabulary that enables the representation of person-level data sets and related metadata.
 It is based on DDI (Data Documentation Initiative) which is a metadata standard related to the observation and measurement of human activity.
-Using Disco, such data sets which are often used in different domains like the social, ecomical and behavoural sciences can be published as Linked Data. 
+Using Disco, such data sets which are often used in different domains like the social, ecomical and behavioral sciences can be published as Linked Data. 
 However, for a meaningful and complete publication of these data sets, additional established RDF vocabularies (e.g. RDF Data Cube, DCAT, SKOS, PROV-O, XKOS, and PHDD) are reused to a large extend. 
 This combination allows for expressing information on metadata of data collections, single data sets, relationships between them, different versions of them and related provenance information. 
 In this tutorial, we show how Disco is interwoven with these vocabularies and how these connections can be used in order to publish complex and domain-specific data sets.
@@ -222,7 +222,7 @@ In different real world use cases, we demonstrate the adoption and inclusion of 
 
 \section{Motivation}
 The DDI-RDF Discovery Vocabulary (Disco) \cite{Bosch2012} is an RDF Schema vocabulary which can be utilized to represent person-level data sets and related metadata as Linked Data. 
-It is based on the metadata standard DDI (Data Documentation Initiative) which enables the representation of the observation and measurement of human activity and which is often used in domains like the social, ecomical and behavoural sciences. 
+It is based on the metadata standard DDI (Data Documentation Initiative) which enables the representation of the observation and measurement of human activity and which is often used in domains like the social, ecomical and behavioral sciences. 
 The metadata of such data can get highly complex by e.g. necessary provenance information and relationships to data aggregates, data collections, and the physical data sources.
 Hence beside Disco, additional widely accepted and adopted RDF vocabularies (e.g. RDF Data Cube\footnote{\url{http://www.w3.org/TR/vocab-data-cube/}}, DCAT\footnote{\url{http://www.w3.org/TR/vocab-dcat/}}, SKOS\footnote{\url{http://www.w3.org/TR/skos-reference/}}, and PROV-O\footnote{\url{http://www.w3.org/TR/prov-o/}}) are reused to a large extend \cite{Bosch2013} in order to enable a full data documentation, which is necessary to represent such data in full extent. 
 In this tutorial, an introduction to Disco and its inter-connections to these vocabularies is given. 
