--- a/paper/ISWC 2015 Tutorial/ISWC-2015-tutorial.tex
+++ b/paper/ISWC 2015 Tutorial/ISWC-2015-tutorial.tex
@@ -198,7 +198,7 @@
 The DDI-RDF Discovery Vocabulary (Disco) is an RDF Schema vocabulary that enables the representation of person-level data sets and related metadata.
 It is based on DDI (Data Documentation Initiative) which is a metadata standard related to the observation and measurement of human activity.
 Using Disco, such data sets which are often used in different domains like the social, ecomical and behavioral sciences can be published as Linked Data. 
-However, for a meaningful and complete publication of these data sets, additional established RDF vocabularies (e.g. RDF Data Cube, DCAT, SKOS, PROV-O, XKOS, and PHDD) are reused to a large extend. 
+However, for a meaningful and complete publication of these data sets, additional established RDF vocabularies (e.g. RDF Data Cube, DCAT, SKOS, PROV-O, XKOS, and PHDD) are reused to a large extent. 
 This combination allows for expressing information on metadata of data collections, single data sets, relationships between them, different versions of them and related provenance information. 
 In this tutorial, we show how Disco is interwoven with these vocabularies and how these connections can be used in order to publish complex and domain-specific data sets.
 In different real world use cases, we demonstrate the adoption and inclusion of Disco in existing information systems. 
@@ -224,7 +224,7 @@ In different real world use cases, we demonstrate the adoption and inclusion of 
 The DDI-RDF Discovery Vocabulary (Disco) \cite{Bosch2012} is an RDF Schema vocabulary which can be utilized to represent person-level data sets and related metadata as Linked Data. 
 It is based on the metadata standard DDI (Data Documentation Initiative) which enables the representation of the observation and measurement of human activity and which is often used in domains like the social, ecomical and behavioral sciences. 
 The metadata of such data can get highly complex by e.g. necessary provenance information and relationships to data aggregates, data collections, and the physical data sources.
-Hence beside Disco, additional widely accepted and adopted RDF vocabularies (e.g. RDF Data Cube\footnote{\url{http://www.w3.org/TR/vocab-data-cube/}}, DCAT\footnote{\url{http://www.w3.org/TR/vocab-dcat/}}, SKOS\footnote{\url{http://www.w3.org/TR/skos-reference/}}, and PROV-O\footnote{\url{http://www.w3.org/TR/prov-o/}}) are reused to a large extend \cite{Bosch2013} in order to enable a full data documentation, which is necessary to represent such data in full extent. 
+Hence beside Disco, additional widely accepted and adopted RDF vocabularies (e.g. RDF Data Cube\footnote{\url{http://www.w3.org/TR/vocab-data-cube/}}, DCAT\footnote{\url{http://www.w3.org/TR/vocab-dcat/}}, SKOS\footnote{\url{http://www.w3.org/TR/skos-reference/}}, and PROV-O\footnote{\url{http://www.w3.org/TR/prov-o/}}) are reused to a large extent \cite{Bosch2013} in order to enable a full data documentation, which is necessary to represent such data in full extent. 
 In this tutorial, an introduction to Disco and its inter-connections to these vocabularies is given. 
 It is presented how these connections can be used in order to publish complex domain-specific data sets.
 In different real world use cases and by building a data set serving as running example, the presenters of the tutorial demonstrate the adoption and inclusion of Disco in existing information systems.
@@ -252,7 +252,7 @@ It is based on DDI (Data Documentation Initiative)\footnote{\url{http://www.ddia
 While DDI is an international metadata standard with origins in the quantitative social sciences, it is increasingly being used by researchers and practitioners in other disciplines. It is also being used to document other data types, such as social media, biomarkers, administrative data, and transaction data. The specification itself is modular and can document and manage different stages of the data lifecycle, such as conceptualization, collection, processing, analysis, distribution, discovery, repurposing, and archiving.
 This tutorial aims to present the Disco vocabulary, its relationship to other necessary RDF vocabularies, and its validation.
  
-For a publication of domain-specific metadata as Linked Data, additional established RDF vocabularies (e.g. RDF Data Cube, DCAT, SKOS, PROV-O, XKOS, and PHDD) are reused to a large extend. It is shown how Disco is interwoven with these vocabularies. 
+For a publication of domain-specific metadata as Linked Data, additional established RDF vocabularies (e.g. RDF Data Cube, DCAT, SKOS, PROV-O, XKOS, and PHDD) are reused to a large extent. It is shown how Disco is interwoven with these vocabularies. 
 These connections enable the representation of various relevant aspects, e.g. aggregate data derived from person-level data (also known as micro data) by the RDF Data Cube vocabulary, PROV-O and Disco, data collections and catalogs (together with DCAT), and data (tables) in a rectangular format by using PHDD. XKOS can be used to represent statistical classifications.
 %The Data Cube vocabulary is a W3C standard for representing data cubes representing multidimensional aggregate data derived from microdata which is represented by Disco. DCAT is a W3C standard for describing catalogs of datasets. Physical data description (PHDD) represents data (tables) in a rectangular format. The data could be either represented in records with character-separated values (CSV) or in records with fixed length. The combined usage of PHDD, Disco, and DCAT enables the creation of data repositories which provide metadata for the description of collections, for data discovery, and for processing of the data. 
 
